fix: added font-display: swap to avoid invisible text

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,12 +1,14 @@
 @use "../abstracts/variables";
 
 @font-face {
+  font-display: swap;
   font-family: "Rubik";
   font-weight: 400;
   src: url("../fonts/Rubik-Regular.ttf") format("truetype");
 }
 
 @font-face {
+  font-display: swap;
   font-family: "Rubik";
   font-weight: 500;
   src: url("../fonts/Rubik-Medium.ttf") format("truetype");
